--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Imprima&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,100.6,200..1000;1,6..12,100.6,200..1000&display=swap');
+      </style>
     <title>Vite + React</title>
   </head>
   <body>
